tests/paczka2/big_fuzzy/67280456.err
Error in line 1: TjpxOsECLn A472 55,3
Error in line 16: LujIkt S140 -2,3
Error in line 10: S140 S751 27,5
Error in line 17: S140 A472 61,1
Error in line 20: S140 S616 59,4
Error in line 22: D5kg S140 57,3
Error in line 23: D5kg S616 50,4
Error in line 24: LujIkt S140 78,7
Error in line 34: S140 S140 14,6
Error in line 38: D5kg S751 59,1
Error in line 40: S140 A472 79,3
Error in line 35: Hr6 S616 24,7
Error in line 49: TjpxOsECLn A472 34,5
Error in line 50: TjpxOsECLn S751 59,6
Error in line 52: OIckuaPgQWb 751 62,5
Error in line 55: 7g4z S140 11,8
Error in line 45: S140 S751 44,4
Error in line 57: TjpxOsECLn S140 31,5
Error in line 65: Hr6 A472 49,1
Error in line 62: D5kg S751 87,8
Error in line 69: TjpxOsECLn A472 77,7
Error in line 70: LujIkt A472 16,1
Error in line 79: OIckuaPgQWb S751 377,8
Error in line 89: LujIkt A472 85,3
Error in line 85: S140 S751 16,0
Error in line 95: TjpxOsECLn S616 72,7
Error in line 94: LujIkt A472 66,8
Error in line 98: TjpxOsECLn S140 64,7
Error in line 114: D5kg A472 133,43
Error in line 111: OIckuaPgQWb A472 70,4
Error in line 108: LujIkt S751 200,7
Error in line 115: OIckuaPgQWb S140 41,3
Error in line 106: Hr6 S140 93,2
Error in line 107: TjpxOsECLn A472 28,3
Error in line 136: TjpxOsECLn S751 18,9
Error in line 135: OIckuaPgQWb S781 78,4
Error in line 130: S140 S616 99,7
Error in line 137: TjpxOsECLn S140 75,5
Error in line 142: S140 S751 83,0
Error in line 110: D5kg A472 84,9
Error in line 150: TjpxOsECLn S751 27,0
Error in line 161: OIckuaPgQWb S140 4,6
Error in line 162: OIckuaPgQWb S751 5,7
Error in line 168: D5kg S751 4,6
Error in line 176: TjpxOsECLn A472 82,1
Error in line 177: LujIkt S616 30,1
Error in line 181: Hr6 A472 21,1
Error in line 172: D5kg S140 13,4
Error in line 190: S140 S616 46,2
Error in line 196: S140 S751 3,1
Error in line 209: S140 S616 41,5
Error in line 240: TjpxOsECLn S140 91,5
Error in line 239: D5kg S751 96,5
